Fixing Type error

--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@ body::-webkit-scrollbar {
   left: 0;
   z-index: -2;
   overflow: hidden;
-  background-image: linear-gradient(125deg, #1f74f1 -10%, #0850b9 100%);
+  background-image: linear-gradient(125deg, #fa6f18 -10%, #e84d00 100%);
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
 }
 
@@ -121,8 +121,8 @@ body::-webkit-scrollbar {
   content: "";
   background-image: linear-gradient(
     -180deg,
-    rgba(0, 0, 0, 0.025) 0,
-    rgba(0, 0, 0, 0.075) 99%
+    rgba(0, 0, 0, 0.12) 0,
+    rgba(0, 0, 0, 0.1) 99%
   );
   position: absolute;
   left: 0;
@@ -137,7 +137,6 @@ body::-webkit-scrollbar {
   left: 0;
   z-index: -1;
   user-select: none;
-  
 }
 
 /* HEADER */
@@ -189,7 +188,9 @@ body::-webkit-scrollbar {
   margin-left: -8px;
   user-select: none;
   font-weight: 700;
-  color: #292929;
+  color: #1a1a1ae3;
+  font-size: 20px;
+  text-shadow: 0 1px 3px rgba(255, 255, 255, 0.5);
 }
 
 /* BOOKMARKS BTN */
@@ -480,6 +481,7 @@ body::-webkit-scrollbar {
   margin: 0 auto;
   width: 610px;
   margin-top: 20px;
+  padding-inline: 10px;
 }
 
 .search > button {
